Closed Bug 588212 Opened 14 years ago Closed 14 years ago

LayerManagerD3D9 PaintToTarget uses wrong render target

Categories

(Core :: Graphics, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- beta5+

People

(Reporter: mattwoodrow, Assigned: mattwoodrow)

References

Details

Attachments

(1 file)

This is making most of the reftests pass as the default render target is always a 1x1 surface.
Attached patch FixSplinter Review
Attachment #466824 - Flags: review?(bas.schouten)
Attachment #466824 - Flags: review?(bas.schouten) → review+
Blocks: d3d9-layers
Depends on: 586459
Blocks: 586459
No longer depends on: 586459
No longer blocks: d3d9-layers
blocking2.0: --- → ?
Assignee: nobody → matt.woodrow+bugzilla
blocking2.0: ? → beta5+
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: