Bug 588212 - LayerManagerD3D9 PaintToTarget uses wrong render target. r=bas, a=beta5+