gfx/layers/d3d9/LayerManagerD3D9.cpp
@@ -253,8 +253,7 @@ LayerManagerD3D9::PaintToTarget()
 {
   nsRefPtr<IDirect3DSurface9> backBuff;
   nsRefPtr<IDirect3DSurface9> destSurf;
-  device()->GetBackBuffer(0, 0, D3DBACKBUFFER_TYPE_MONO,
-                         getter_AddRefs(backBuff));
+  device()->GetRenderTarget(0, getter_AddRefs(backBuff));
 
   D3DSURFACE_DESC desc;
   backBuff->GetDesc(&desc);
